--- a/318/lectures/javascript-plugins/index.html
+++ b/318/lectures/javascript-plugins/index.html
@@ -3,8 +3,8 @@
   <head>
     <meta charset="UTF-8">
     <title>OMDb API</title>
-    <link rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="container text-center">
