--- a/360/lectures/javascript-plugins/index.html
+++ b/360/lectures/javascript-plugins/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8">
     <title>OMDb API</title>
-    <link rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
   </head>
   <body>
-    <div class="container text-center">
-      <form class="form-inline" id="search-form">
+    <div class="container text-center" style="margin: 50px auto;">
+      <form class="form-inline" id="search-form" style="margin-bottom: 50px;">
         <input type="text" class="form-control" placeholder="Find movie" id="search-input">
         <input type="submit" class="btn btn-primary">
       </form>
