--- a/360/lectures/javascript-plugins/index.html
+++ b/360/lectures/javascript-plugins/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <title>OMDb API</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="container text-center" style="margin: 50px auto;">
-      <form class="form-inline" id="search-form" style="margin-bottom: 50px;">
+    <div class="container text-center">
+      <form class="form-inline" id="search-form">
         <input type="text" class="form-control" placeholder="Find movie" id="search-input">
         <input type="submit" class="btn btn-primary">
       </form>
