--- a/360/lectures/javascript-plugins/index.html
+++ b/360/lectures/javascript-plugins/index.html
@@ -8,6 +8,20 @@
   </head>
   <body>
     <div class="container text-center">
+      <select class="select2">
+        <option value="dog">dog</option>
+        <option value="dog">dog</option>
+        <option value="dog">dog</option>
+        <option value="dog">dog</option>
+        <option value="dog">dog</option>
+        <option value="dog">dog</option>
+        <option value="dog">dog</option>
+        <option value="dog">dog</option>
+        <option value="dog">dog</option>
+        <option value="dog">dog</option>
+      </select>
+      <textarea name="" id="editor"></textarea>
+      <div id="preview"></div>
       <form class="form-inline" id="search-form">
         <input type="text" class="form-control" placeholder="Find movie" id="search-input">
         <input type="submit" class="btn btn-primary">
