--- a/612/lectures/dom-and-events/index.html
+++ b/612/lectures/dom-and-events/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <title>Playground - JavaScript 101</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <p style="margin-top: 40vh; text-align: center; font: normal 24px monospace;">
@@ -10,6 +11,28 @@
     </p>
 
     <!-- Add some HTML in here -->
+    <ol id="fifa-wins">
+      <li>Brazil (5 wins)</li>
+      <li>Germany (4 wins)</li>
+      <li>Italy (4 wins)</li>
+      <li>Argentina (2 wins)</li>
+      <li>Uruguay (2 wins)</li>
+    </ol>
+
+    <input name="email" id="email" value="paul@gmail.com" />
+
+    <a href="https://www.lewagon.com" id="home">Le Wagon <em>rocks</em></a>
+
+    <div id="user" data-uid="2471555" data-github-nickname="Papillard">
+      Boris Paillard
+    </div>
+
+    <div id="wrapper">
+      <img class="avatar" src="https://kitt.lewagon.com/placeholder/users/monsieurpaillard"
+       id="romain" height="200" alt="Romain Paillard" />
+       <img class="avatar" src="https://kitt.lewagon.com/placeholder/users/Papillard"
+       id="boris" height="200" alt="Boris Paillard" />
+    </div>
 
     <script src="main.js"></script>
   </body>
