--- a/612/lectures/http-and-ajax/index.html
+++ b/612/lectures/http-and-ajax/index.html
@@ -3,13 +3,20 @@
   <head>
     <meta charset="UTF-8">
     <title>Playground - JavaScript 101</title>
+    <link rel="stylesheet"
+    href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
   </head>
   <body>
-    <p style="margin-top: 40vh; text-align: center; font: normal 24px monospace;">
-      Open the console 🤓
-    </p>
-
     <!-- Add some HTML in here -->
+    <div class="container text-center">
+      <button id="click-me">Click me</button>
+      <input type="text" id="search">
+      <form id="search-form">
+        <input type="text" placeholder="search for a movie..." id="search-input">
+        <input type="submit" value="Search">
+      </form>
+      <ul id="results" class="list-inline"></ul>
+    </div>
 
     <script src="main.js"></script>
   </body>
