http and ajax livecode done

--- a/612/livecodes/http-and-ajax/index.html
+++ b/612/livecodes/http-and-ajax/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <h1>ClearBit Demo</h1>
-    <form action="#" id="clearbitForm">
+    <form id="clearbitForm">
       <input type="text" placeholder="Stalk someone" id="clearbitEmail">
       <input type="submit" id="clearbitSubmit">
     </form>
